--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ buildFeatures{
 }
 
 dependencies {
-
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9 '
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
